src/App.css
.Test {
  font-family: 'Arial';
  
}

/* .item {
  width: 100px;
  height: 100px;
  margin: 10px;
  background-color: lightblue;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2em;
  font-weight: bold;
  color: white;
} */

sidebar-input::placeholder {
  color: #757575

}

.name-form {
  overflow: hidden;
  text-align: right; 
  font-size: 2.5rem;
  float: right;
  margin-top: .001rem;
  /* margin-bottom: .3rem; */
  font-weight: 500;
  line-height: 1;
  font-family: Helvetica, sans-serif;
  /* padding-right: 20px; */
  box-sizing: border-box;
  display: block;
  /* font-size: 2em; */
  /* margin-block-start: 0.67em; */


  color: #212529;

  
  
  margin-block-end: 1em;
  
  margin-inline-end: 18px;
  
}

button {
  /* border-width: 0px; */
  /* padding:2px; */
  /* margin: 8px;
  padding: 5px; */
  background-color: gainsboro;
}

.side-bar-add-button {
  background-color: coral;
  border: none;
  font-size: 2rem;
}

/* border-color: 0; */
/* button, input, select, textarea {
  margin: 8px;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
} */

/* * {
  margin: 0;
  padding:0;
  border: 0;
  box-sizing: border-box;
} */


.slide-button-left {
  left: .5%;
  transition: all 1s;
  position: absolute;
}
.slide-button-right {
  left: 15%;
  transition: all 1s;
position: absolute;
}

.side-bar-button {
  height:40px;
  }
.side-bar-button {
padding-right: 5px;
}
.side-bar-closed {
  left: -100%;
  transition: all 2s;
  position: absolute;
  /* margin-top: 3rem; */
  } 
  .break {
    margin-top: 5rem;
  }
  .side-bar-open {
  
  left: 2;
  position: absolute;
  transition: all 2s;
  /* left: -0%;
  transition: all 2s; */
  }

.about-me {
  font-size: 1rem;
  
}
.add-item {
  display:flex;
  justify-content: space-between;
  
}
  /* .side-bar-open {
    align-content: flex-end;
    animation-direction: normal; 
  }
  .side-bar-close {
    align-content: flex-end;
    animation-direction: reverse; 
  } */


  *:focus {
    outline: none;
}
input {
  background-color: inherit;
  line-height: 1.5;
  border-width: 0;
  margin-top: 0;
}

.add-item p {
  margin-bottom: 0px;
  text-decoration: underline;
}
a {
  font-size: 2rem;
  text-align: left;
  font-family: Helvetica, sans-serif;
  width: 240px;
}
/* aside:nth-child(1) input {
  font-size: 2rem;
      text-align: left;
      font-family: Helvetica, sans-serif;
      width: 240px;
      color: #757575;
  } */

input name-form {
  font-size: 3.5rem;
}
input, select, textarea{
  /* color: #212529; */
  /* margin-bottom: 1rem; */
  display: block;
  /* margin-block-start: 1em; */
  /* margin-block-end: 1em; */
  /* margin-inline-start: 0px; */
  /* margin-inline-end: 0px;  */
}
img{border:0;}
  body {background-color: coral;}
  img {
    width: 100%; 
    align-items: center;
  }
  
  .thumbnail{
    overflow: hidden;
    height: 157px;
  }
  p {
    font-size: 2rem;    
    text-align: left;
    font-family: Helvetica, sans-serif;
    /* width: 70px; */
  }

  h1 {
    font-size:3.5rem;
    text-align: right;
    font-family: Helvetica, sans-serif;
    padding-right: 20px;
  }

.cont {
  display:grid;
  height: 100vh;
  grid-template-columns:  0.25fr 1fr 0.25fr;
  grid-template-rows: 0.5fr 1.5fr 0.4fr;
  grid-template-areas: 
  "leftbar header header"
  "leftbar main rightbar"
  "leftbar footer rightbar";

}

header {
  /* background-color: gray; */
  grid-area: header;
  min-height: 150px;
  background-color: coral;

}

main {
  background-color: gainsboro;
  /* max-height:inherit; */
  /* grid-area: main; */

}

aside:nth-child(1) {
  /* background-color: lightgray; */
  padding-top: 5px;
  padding-left: 5px;
  padding-right: 5px;
  grid-area: leftbar;
  background-color: coral;
}


aside:nth-child(3) {
  /* background-color: lightgray; */
  grid-area: rightbar;
  background-color: coral;
}

footer {
  background-color: lightgrey;
  grid-area: footer;
  min-height: 100px;
}

article {
  /* flex: 1 0 auto; */
  padding-top: 75px;
  padding-inline: 75px;

}


ul {
  display: flex;
/* flex-direction: row; */
flex-wrap: wrap;
list-style: none;
}

li {
  background-color: red;
  height:80px;
  width: 80px; 
  outline-width: 5px;
  padding: 10px;
  margin: 10px;
  outline-color: black;
}

.container {
  /* max-width: 750px; */
  /* margin: 0 auto;  */
  
  /* display: flex; */
  /* flex-wrap: wrap;  */
  /* align-items: center; justify-content: center */
  /* justify-content: center;  */

  /* grid-auto-columns: 6;
  grid-auto-rows: 6; */
} 

.grid {
  display: flex;
  flex-direction: column; 
  
  /* height: 800; */
  /* max-height: 150px; */
  /* overflow-y: none;
  overflow-x: hidden; */ 
}

  
/* SIDEBAR */


/* .st-effect-1.st-menu {
	visibility: visible;
	-webkit-transform: translate3d(-100%, 0, 0);
	transform: translate3d(-100%, 0, 0);
}

.st-effect-1.st-menu-open .st-effect-1.st-menu {
	visibility: visible;
	-webkit-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
}

.st-effect-1.st-menu::after {
	display: none;
} */







  
.picture {
    flex: 0 0 100px;  
}
.picture .photo{
  border-radius: 13px;
  padding: 0px;
}
.picture .photo:hover{
  border-radius: 13px;
  
}

.picture :hover {
    /* transform: scale(1.5); */
    /* height: 145px;
    width:145px; */
    transform: scale(2,2);
    box-shadow: -3px 3px 5px 2px #aaaaaa,
  }
  .emptyBox {
    color: gainsboro;
    flex: 0 0 100px;
    width: 100px; 
    padding: 0px;
    margin: 0px; 
  }

  
  .emptyBox .photo {
    border-radius: 13px;
    /* box-shadow: -6px 4px 18px 3px #aaaaaa, 0 0 13px -1px #aaaaaa inset; */
    box-shadow: -3px 3px 5px 2px #aaaaaa;
    top: 0;
    transition: top ease 0.5s;
    transition: transform 0.3s ease;
    transform: translateX(0px);
    transform: translateY(0px);
  }

  .emptyBox .photo:hover {
    border-radius: 13px;
    box-shadow: -7px 7px 10px 4px #aaaaaa, 0 0 10px -1px #aaaaaa inset;
    transform: translateX(2px), translateY(2px);
  }

/* input.folder-form {
    
    font-size: 2rem;
    text-align: left;
    font-family: Helvetica, sans-serif;
    width: 170px;
    color: #212529;
  } */

  .box {
    box-shadow:
    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
    0 12.5px 10px rgba(0, 0, 0, 0.06),
    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
    0 100px 80px rgba(0, 0, 0, 0.12)
  ;
  
    min-height: 200px;
    width: 50vw;
    margin: 100px auto;
    background: white;
    border-radius: 5px;
  }
  
  
  body {
    background: #EEF2F7;
  }

  /* @keyframes inAnimation {
    0% {
      opacity: 0;
      visibility: hidden;
    }
    100% {
      opacity: 1;
      visibility: visible;
    }
  }
  
  @keyframes outAnimation {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
      visibility: hidden;
    }
  } */
/* 
  @keyframes inAnimation {
    0% {
      opacity: 0;
      visibility: hidden;
    }
    100% {
      opacity: 1;
      visibility: visible;
    }
  }
  
  @keyframes outAnimation {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
      visibility: hidden;
    }
  } */
  
  .photo {
    /* background-color: white; */
    outline-color: black;
    height:80px;
    width: 80px; 
    outline-width: 5px;
    padding: 10px;
    margin: 10px; 
  }

  .link-cont a {
    display: block;
  }

  .modalBtn {
    position: absolute; right: 0;
    border:none;
    background-color: coral;
  }
  /* modalBtn-two { 
  
  } */
.about-me-cont {
  width:15rem;
  display: flex;
  flex-wrap: wrap;
}button

div.modal-header {
background-color: coral;
}
 
div.modal-content {
  border-radius: 13px;
  background-color: coral
  
}
.modal-backdrop {
  background-color: green;
}
.modal {
  border-radius: 13px;
  padding:5px;
}

div.modal-content form {
  padding:5px;
}

div.modal-content form button {  
  float: right;
}

  .switch-container {
    display:flex;
    margin-top: 0;
  }
  .switch-container p {
    
    margin-bottom: .70rem;
    margin-top: 0.50rem;
    font-size: 19px;
  }

.toggle-switch {
  
  position: relative;
  display: inline-block;
  width: 50px;
  height: 25px;
  margin: 10px;
}
.toggle-switch input[type="checkbox"] {
  display: none;
}
.toggle-switch .switch {
  position: absolute;
  cursor: pointer;
  background-color: #ccc;
  border-radius: 25px;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  transition: background-color 0.2s ease;
}
.toggle-switch .switch::before {
  position: absolute;
  content: "";
  left: 2px;
  top: 2px;
  width: 21px;
  height: 21px;
  background-color: #aaa;
  border-radius: 50%;
  transition: transform 0.3s ease;
}
.toggle-switch input[type="checkbox"]:checked + .switch::before {
  transform: translateX(25px);
  background-color: #ff0000;
}
.toggle-switch input[type="checkbox"]:checked + .switch {
  background-color:  #ccc;
}









/* 
.flexbox {
  display: flex;
  justify-content: space-between;

  width: 100%;
  max-width: 768px;
  height: 100vh;

  overflow: hidden;

  margin: 0 auto;
  padding: 15px;
}

.flexbox .frame {
  display: flex;
  flex-direction: column;
  background-color: coral;
  width: 100%;
  max-width: 300px;

  padding: 15px;
}

.flexbox .frame .pic {
padding: 15 px 25px ;
background-color: #f3f3f3;

cursor: pointer;
margin-bottom: 15px;
} */

